--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <h3>PriceWithTax</h3>
                             <p>Quickly see retail price plus tax (VAT, GST, HST etc.)</p>
                             <p>
-                            <a href="http://play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-primary">Install Now!</a> <a href="http://play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-default">More Info</a>
+                            <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-default">More Info</a>
                             </p>
                         </div>
                     </div>
@@ -102,14 +102,14 @@
                             <h3>WhichOneIsCheaper?</h3>
                             <p>Grocery shopping bulk price calculator to compare best deal at the supermarket.</p>
                             <p>
-                            <a href="http://play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-primary">Install Now!</a> <a href="http://play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-default">More Info</a>
+                            <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-default">More Info</a>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 hero-feature">
                     <!--  <div class="thumbnail">
-                                                <img src="http://placehold.it/800x500" alt="">
+                                                <img src="//placehold.it/800x500" alt="">
                                                 <div class="caption">
                                                         <h3>Feature Label</h3>
                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6 hero-feature">
                     <!--  <div class="thumbnail">
-                                                <img src="http://placehold.it/800x500" alt="">
+                                                <img src="//placehold.it/800x500" alt="">
                                                 <div class="caption">
                                                         <h3>Feature Label</h3>
                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
