--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Apps at Financializer.com">
         <meta name="author" content="Financializer.com">
-        <link rel="canonical" href="http://apps.financializer.com" />
+        <link rel="canonical" href="https://apps.financializer.com" />
         <title>Apps - Financializer.com</title>
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
