--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         ga_ThsBlg = '\x55A'+'\x2D'+'11'+'\x321'+'5\x32'+'8'+'\x2D'+'3'+'7';  
         window.google_analytics_uacct = ga_ThsBlg;
         </script>
+        <meta name="google-site-verification" content="HyAOc6SUH0Lqi0FoardfgTOnG-NjXUKrY0v6BZSpoPg" />
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
