--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <!-- /.row -->
             <!-- Page Features -->
             <div class="row text-center">
+            <!-- one app cont -->
                 <div class="col-md-3 col-sm-6 hero-feature">
                     <div class="thumbnail">
                         <img src="com.financializer.pricewithtax.png" alt="App: Price with Tax">
@@ -96,6 +97,8 @@
                         </div>
                     </div>
                 </div>
+                <!-- /one app cont -->
+                <!-- one app cont -->
                 <div class="col-md-3 col-sm-6 hero-feature">
                     <div class="thumbnail">
                         <img src="com.financializer.whichoneischeaper.png" alt="App: Which One is Cheaper">
@@ -108,6 +111,23 @@
                         </div>
                     </div>
                 </div>
+                <!-- /one app cont -->
+                <!-- one app cont -->
+                <div class="col-md-3 col-sm-6 hero-feature">
+                    <div class="thumbnail">
+                        <img src="com.financializer.percentoffcalc.png" alt="App: Which One is Cheaper">
+                        <div class="caption">
+                            <h3>Percent Off Calculator</h3>
+                            <p>Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very useful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance!</p>
+                            <p>
+                            <a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc" class="btn btn-default">More Info</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /one app cont -->
+
+
                 <div class="col-md-3 col-sm-6 hero-feature">
                     <!--  <div class="thumbnail">
                                                 <img src="//placehold.it/800x500" alt="">
