--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h3 id="apps_section">Apps</h3>
+                    <h4>Simple and useful FREE phone apps. They require NO special permissions. They Contain NO ads or junk. Try them once!</h4>
                 </div>
             </div>
             <!-- /.row -->
@@ -89,7 +90,7 @@
                     <div class="thumbnail">
                         <img src="com.financializer.pricewithtax.png" alt="App: Price with Tax">
                         <div class="caption">
-                            <h3>PriceWithTax</h3>
+                            <h3>PriceWithTax Calculator</h3>
                             <p>Quickly see retail price plus tax (VAT, GST, HST etc.)</p>
                             <p>
                             <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-default">More Info</a>
@@ -103,8 +104,8 @@
                     <div class="thumbnail">
                         <img src="com.financializer.whichoneischeaper.png" alt="App: Which One is Cheaper">
                         <div class="caption">
-                            <h3>WhichOneIsCheaper?</h3>
-                            <p>Grocery shopping bulk price calculator to compare best deal at the supermarket.</p>
+                            <h3>WhichOneIsCheaper? Calculator</h3>
+                            <p>Grocery shopping bulk price app to compare best deal at the supermarket.</p>
                             <p>
                             <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-default">More Info</a>
                             </p>
