--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <img src="com.financializer.whichoneischeaper.png" alt="App: Which One is Cheaper">
                         <div class="caption">
                             <h3>WhichOneIsCheaper? Calculator</h3>
-                            <p>Grocery shopping bulk price app to compare best deal at the supermarket.</p>
+                            <p>Grocery shopping app to save you money! Quickly compare items and see the best and cheaper price of a deal available at any shop or supermarket!</p>
                             <p>
                             <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-default">More Info</a>
                             </p>
