--- a/index.html
+++ b/index.html
@@ -1,174 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <script>
-        ga_ThsBlg = '\x55A'+'\x2D'+'11'+'\x321'+'5\x32'+'8'+'\x2D'+'3'+'7';  
-        window.google_analytics_uacct = ga_ThsBlg;
-        </script>
-        <meta name="google-site-verification" content="HyAOc6SUH0Lqi0FoardfgTOnG-NjXUKrY0v6BZSpoPg" />
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Apps at Financializer.com">
-        <meta name="author" content="Financializer.com">
-        <link rel="canonical" href="https://apps.financializer.com" />
-        <title>Apps - Financializer.com</title>
-        <!-- Bootstrap Core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <!-- Custom CSS -->
-        <link href="css/heroic-features.css" rel="stylesheet">
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', ga_ThsBlg , 'auto');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-        </script>
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Apps.Financializer.com</a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <!--                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                        <ul class="nav navbar-nav">
-                                                <li>
-                                                        <a href="#">About</a>
-                                                </li>
-                                                <li>
-                                                        <a href="#">Services</a>
-                                                </li>
-                                                <li>
-                                                        <a href="#">Contact</a>
-                                                </li>
-                                        </ul>
-                </div> -->
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
-        <!-- Page Content -->
-        <div class="container">
-            <!-- Jumbotron Header -->
-            <header class="jumbotron hero-spacer">
-                <h1>Financializer Apps</h1>
-                <p>Our Android apps available on Google Play.</p>
-                <p><a href="#apps_section" class="btn btn-primary btn-large">See them</a>
-                </p>
-            </header>
-            <hr>
-            <!-- Title -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3 id="apps_section">Apps</h3>
-                    <h4>Simple and useful FREE phone apps. They require NO special permissions. They Contain NO ads or junk. Try them once!</h4>
-                </div>
-            </div>
-            <!-- /.row -->
-            <!-- Page Features -->
-            <div class="row text-center">
-            <!-- one app cont -->
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <img src="com.financializer.pricewithtax.png" alt="App: Price with Tax">
-                        <div class="caption">
-                            <h3>PriceWithTax Calculator</h3>
-                            <p>Quickly see retail price plus tax (VAT, GST, HST etc.)</p>
-                            <p>
-                            <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax" class="btn btn-default">More Info</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- /one app cont -->
-                <!-- one app cont -->
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <img src="com.financializer.whichoneischeaper.png" alt="App: Which One is Cheaper">
-                        <div class="caption">
-                            <h3>WhichOneIsCheaper? Calculator</h3>
-                            <p>Grocery shopping app to save you money! Quickly compare items and see the best and cheaper price of a deal available at any shop or supermarket!</p>
-                            <p>
-                            <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper" class="btn btn-default">More Info</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- /one app cont -->
-                <!-- one app cont -->
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <div class="thumbnail">
-                        <img src="com.financializer.percentoffcalc.png" alt="App: Which One is Cheaper">
-                        <div class="caption">
-                            <h3>Percent Off Calculator</h3>
-                            <p>Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very useful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance!</p>
-                            <p>
-                            <a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc" class="btn btn-primary">Install Now!</a> <a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc" class="btn btn-default">More Info</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- /one app cont -->
+	<head>
+		<script>
+		ga_ThsBlg = '\x55A'+'\x2D'+'11'+'\x321'+'5\x32'+'8'+'\x2D'+'3'+'7';
+		window.google_analytics_uacct = ga_ThsBlg;
+		</script>
+		<meta name="google-site-verification" content="HyAOc6SUH0Lqi0FoardfgTOnG-NjXUKrY0v6BZSpoPg" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Apps at Financializer.com">
+		<meta name="author" content="Financializer.com">
+		<link rel="canonical" href="https://apps.financializer.com" />
+		<title>Apps - Financializer.com</title>
+		<!-- Bootstrap Core CSS -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<!-- Custom CSS -->
+		<link href="css/heroic-features.css" rel="stylesheet">
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body style="padding-top:0;">
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', ga_ThsBlg , 'auto');
+		ga('require', 'displayfeatures');
+		ga('send', 'pageview');
+		</script>
 
-
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <!--  <div class="thumbnail">
-                                                <img src="//placehold.it/800x500" alt="">
-                                                <div class="caption">
-                                                        <h3>Feature Label</h3>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                                        <p>
-                                                        <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                                                        </p>
-                                                </div>
-                    </div> -->
-                </div>
-                <div class="col-md-3 col-sm-6 hero-feature">
-                    <!--  <div class="thumbnail">
-                                                <img src="//placehold.it/800x500" alt="">
-                                                <div class="caption">
-                                                        <h3>Feature Label</h3>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                                        <p>
-                                                        <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                                                        </p>
-                                                </div>
-                    </div> -->
-                </div>
-            </div>
-            <!-- /.row -->
-            <hr>
-            <!-- Footer -->
-            <footer>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Copyright &copy; Financializer.com All Rights Reserved</p>
-                    </div>
-                </div>
-            </footer>
-        </div>
-        <!-- /.container -->
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
-    </body>
+		<!-- Page Content -->
+		<div class="container">
+			<!-- Jumbotron Header -->
+			<header class="jumbotron hero-spacer">
+				<h1><img style="height:1em;display:inline-block;vertical-align:middle;" src="logo_250.png"> Financializer Apps</h1>
+				<p>Simple, user-friendly, lightweight and useful free phone apps. They require NO special permissions. They Contain NO ads or junk. Try our Android apps available on Google Play!</p>
+				<p><a href="#apps_section" class="btn btn-primary btn-large">See them</a>
+			</p>
+		</header>
+		<hr>
+		<!-- Title -->
+		<div class="row">
+			<div class="col-lg-12">
+				<h3 id="apps_section">Apps</h3>
+				<h4></h4>
+			</div>
+		</div>
+		<!-- /.row -->
+		<!-- Page Features -->
+		<div class="row text-center">
+			<!-- one app cont -->
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.currencycalc">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.currencycalc.png" alt="App: Price with Tax">
+						<div class="caption">
+							<h3>Currency Converter Calc</h3>
+							<p> Quick, simple calc for converting major currencies. No ads. No junk. Lightweight</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.pricewithtax.png" alt="App: Price with Tax">
+						<div class="caption">
+							<h3>PriceWithTax Calculator</h3>
+							<p>Quick price + tax (VAT/GST/HST).  No ads. No junk. No permissions. No purchases.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.whichoneischeaper.png" alt="App: Price with Tax">
+						<div class="caption">
+							<h3>WhichOneIsCheaper? Calculator</h3>
+							<p>Grocery shopping price calculator to compare best deal at the supermarket.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.percentoffcalc.png" alt="App: Price with Tax">
+						<div class="caption">
+							<h3>Percent Off Calculator</h3>
+							<p>Simple & quick calc for discount sales prices. No ads. No junk. No permissions.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			
+			<div class="col-md-3 col-sm-6 hero-feature">
+				<!--  <div class="thumbnail">
+								<img src="//placehold.it/800x500" alt="">
+								<div class="caption">
+												<h3>Feature Label</h3>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+												<p>
+																<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+												</p>
+								</div>
+				</div> -->
+			</div>
+			<div class="col-md-3 col-sm-6 hero-feature">
+				<!--  <div class="thumbnail">
+								<img src="//placehold.it/800x500" alt="">
+								<div class="caption">
+												<h3>Feature Label</h3>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+												<p>
+																<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+												</p>
+								</div>
+				</div> -->
+			</div>
+		</div>
+		<!-- /.row -->
+		<hr>
+		<!-- Footer -->
+		<footer>
+			<div class="row">
+				<div class="col-lg-12">
+					<p>Copyright &copy; Financializer.com All Rights Reserved</p>
+				</div>
+			</div>
+		</footer>
+	</div>
+	<!-- /.container -->
+	<!-- jQuery -->
+	<script src="js/jquery.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
