--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 		ga('require', 'displayfeatures');
 		ga('send', 'pageview');
 		</script>
-
 		<!-- Page Content -->
 		<div class="container">
 			<!-- Jumbotron Header -->
@@ -55,45 +54,33 @@
 		<!-- /.row -->
 		<!-- Page Features -->
 		<div class="row text-center">
+			<!--  -->
+			<!--  -->
+			<!--  -->
+			<!--  -->
 			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.averagecalculator">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.averagecalculator.png" alt="">
+						<div class="caption">
+							<h3>Average Calculator (Mean, Median, Mode, Range)</h3>
+							<p> Simple & quick calc for Averages. No ads. No junk. No permissions. No purchases. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) & Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple: No ads. No junk. No permissions, no purchases required. Works offline. Freeware.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
 			<!-- one app cont -->
 			<a href="//play.google.com/store/apps/details?id=com.financializer.currencycalc">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="com.financializer.currencycalc.png" alt="App: Price with Tax">
+						<img src="com.financializer.currencycalc.png" alt="">
 						<div class="caption">
-							<h3>Currency Converter Calc</h3>
-							<p> Quick, simple calc for converting major currencies. No ads. No junk. Lightweight</p>
-							<p>
-								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
-							</p>
-						</div>
-					</div>
-				</div>
-			</a>
-			<!-- one app cont -->
-			<a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax">
-				<div class="col-md-3 col-sm-6 hero-feature">
-					<div class="thumbnail">
-						<img src="com.financializer.pricewithtax.png" alt="App: Price with Tax">
-						<div class="caption">
-							<h3>PriceWithTax Calculator</h3>
-							<p>Quick price + tax (VAT/GST/HST).  No ads. No junk. No permissions. No purchases.</p>
-							<p>
-								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
-							</p>
-						</div>
-					</div>
-				</div>
-			</a>
-			<!-- one app cont -->
-			<a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper">
-				<div class="col-md-3 col-sm-6 hero-feature">
-					<div class="thumbnail">
-						<img src="com.financializer.whichoneischeaper.png" alt="App: Price with Tax">
-						<div class="caption">
-							<h3>WhichOneIsCheaper? Calculator</h3>
-							<p>Grocery shopping price calculator to compare best deal at the supermarket.</p>
+							<h3>Currency Converter (Quickest, Easiest)</h3>
+							<p> Quick, simple & light. No ads, no junk. No purchases & no needless permissions. Simply enter an amount and instantly see its equivalent in other currencies at once. Nothing else to tap or click. Completely FREE. Extremely user-friendly, fast and quick. Lightweight install. No ads. No junk. No purchases. No unnecessary permissions.</p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -105,10 +92,10 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="com.financializer.percentoffcalc.png" alt="App: Price with Tax">
+						<img src="com.financializer.percentoffcalc.png" alt="">
 						<div class="caption">
 							<h3>Percent Off Calculator</h3>
-							<p>Simple & quick calc for discount sales prices. No ads. No junk. No permissions.</p>
+							<p>Simple & quick calc for discount sales prices. No ads. No junk. No permissions. Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very helpful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance. Especially useful for "store closing" type sales. Very lightweight installation, clean & simple: Works offline. No ads. No junk. No permissions, no purchases required.</p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -116,29 +103,60 @@
 					</div>
 				</div>
 			</a>
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.pricewithtax.png" alt="">
+						<div class="caption">
+							<h3>Price With Tax Calculator</h3>
+							<p>Quick Price+Tax (VAT/GST/HST). Lightweight. No ads. No permissions. No purchases. Enter a price and instantly see the total plus sales and retail tax, GST, VAT, PST, HST, RT, ST etc. Very lightweight install. No ads. No junk. No permissions. No purchases.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			<!-- one app cont -->
+			<a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper">
+				<div class="col-md-3 col-sm-6 hero-feature">
+					<div class="thumbnail">
+						<img src="com.financializer.whichoneischeaper.png" alt="">
+						<div class="caption">
+							<h3>Which One Is Cheaper Calculator</h3>
+							<p>Calculate best deal for the buck at supermarket. No Ads. No junk. No permissions. Quickly see the best and cheaper price of a deal. For e.g. A 675g bread for $1.88 or a 550g bread for $1.50: Which one is cheaper? Or, 8 chocolates for $2.80 or 12 for $3.99: Which is cheaper overall? Very lightweight installation, clean & simple: Works offline. No ads. No junk. No permissions, no purchases required.</p>
+							<p>
+								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			<!-- one app cont -->
 			
 			<div class="col-md-3 col-sm-6 hero-feature">
 				<!--  <div class="thumbnail">
-								<img src="//placehold.it/800x500" alt="">
-								<div class="caption">
-												<h3>Feature Label</h3>
-												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-												<p>
-																<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-												</p>
-								</div>
+											<img src="//placehold.it/800x500" alt="">
+											<div class="caption">
+																		<h3>Feature Label</h3>
+																		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																		<p>
+																									<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+																		</p>
+											</div>
 				</div> -->
 			</div>
 			<div class="col-md-3 col-sm-6 hero-feature">
 				<!--  <div class="thumbnail">
-								<img src="//placehold.it/800x500" alt="">
-								<div class="caption">
-												<h3>Feature Label</h3>
-												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-												<p>
-																<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-												</p>
-								</div>
+											<img src="//placehold.it/800x500" alt="">
+											<div class="caption">
+																		<h3>Feature Label</h3>
+																		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																		<p>
+																									<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+																		</p>
+											</div>
 				</div> -->
 			</div>
 		</div>
