--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<script>
-		ga_ThsBlg = '\x55A'+'\x2D'+'11'+'\x321'+'5\x32'+'8'+'\x2D'+'3'+'7';
-		window.google_analytics_uacct = ga_ThsBlg;
 		</script>
 		<meta name="google-site-verification" content="HyAOc6SUH0Lqi0FoardfgTOnG-NjXUKrY0v6BZSpoPg" />
-		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Apps at Financializer.com">
@@ -23,23 +21,23 @@
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
+		<!-- Google Tag Manager -->
+		<script>
+		/* <![CDATA[ */
+		(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-K2B4R95');
+		/* ]]> */
+		</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body style="padding-top:0;">
-		<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		ga('create', ga_ThsBlg , 'auto');
-		ga('require', 'displayfeatures');
-		ga('send', 'pageview');
-		</script>
+		
+		<!-- Google Tag Manager (noscript) --> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K2B4R95" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> <!-- End Google Tag Manager (noscript) -->
 		<!-- Page Content -->
 		<div class="container">
 			<!-- Jumbotron Header -->
 			<header class="jumbotron hero-spacer">
 				<h1><img style="height:1em;display:inline-block;vertical-align:middle;" src="logo_250.png"> Financializer Apps</h1>
-				<p>Simple, user-friendly, lightweight and useful free phone apps. They require NO special permissions. They Contain NO ads or junk. Try our Android apps available on Google Play!</p>
+				<p>Simple, user-friendly, lightweight and useful free phone apps. Try our Android apps available on Google Play!</p>
 				<p><a href="#apps_section" class="btn btn-primary btn-large">See them</a>
 			</p>
 		</header>
@@ -65,7 +63,7 @@
 						<img src="com.financializer.averagecalculator.png" alt="">
 						<div class="caption">
 							<h3>Average Calculator (Mean, Median, Mode, Range)</h3>
-							<p> Simple & quick calc for Averages. No ads. No junk. No permissions. No purchases. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) & Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple: No ads. No junk. No permissions, no purchases required. Works offline. Freeware.</p>
+							<p> Simple & quick calc for Averages. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) & Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple:  Works offline. Freeware.</p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -80,7 +78,7 @@
 						<img src="com.financializer.currencycalc.png" alt="">
 						<div class="caption">
 							<h3>Currency Converter (Quickest, Easiest)</h3>
-							<p> Quick, simple & light. No ads, no junk. No purchases & no needless permissions. Simply enter an amount and instantly see its equivalent in other currencies at once. Nothing else to tap or click. Completely FREE. Extremely user-friendly, fast and quick. Lightweight install. No ads. No junk. No purchases. No unnecessary permissions.</p>
+							<p> Quick, simple & light. Simply enter an amount and instantly see its equivalent in other currencies at once. Nothing else to tap or click. Completely FREE. Extremely user-friendly, fast and quick. Lightweight install.  </p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -95,7 +93,7 @@
 						<img src="com.financializer.percentoffcalc.png" alt="">
 						<div class="caption">
 							<h3>Percent Off Calculator</h3>
-							<p>Simple & quick calc for discount sales prices. No ads. No junk. No permissions. Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very helpful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance. Especially useful for "store closing" type sales. Very lightweight installation, clean & simple: Works offline. No ads. No junk. No permissions, no purchases required.</p>
+							<p>Simple & quick calc for discount sales prices.  Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very helpful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance. Especially useful for "store closing" type sales. Very lightweight installation, clean & simple: Works offline.  </p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -110,7 +108,7 @@
 						<img src="com.financializer.pricewithtax.png" alt="">
 						<div class="caption">
 							<h3>Price With Tax Calculator</h3>
-							<p>Quick Price+Tax (VAT/GST/HST). Lightweight. No ads. No permissions. No purchases. Enter a price and instantly see the total plus sales and retail tax, GST, VAT, PST, HST, RT, ST etc. Very lightweight install. No ads. No junk. No permissions. No purchases.</p>
+							<p>Quick Price+Tax (VAT/GST/HST). Lightweight.  Enter a price and instantly see the total plus sales and retail tax, GST, VAT, PST, HST, RT, ST etc. Very lightweight install.  </p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -125,7 +123,7 @@
 						<img src="com.financializer.whichoneischeaper.png" alt="">
 						<div class="caption">
 							<h3>Which One Is Cheaper Calculator</h3>
-							<p>Calculate best deal for the buck at supermarket. No Ads. No junk. No permissions. Quickly see the best and cheaper price of a deal. For e.g. A 675g bread for $1.88 or a 550g bread for $1.50: Which one is cheaper? Or, 8 chocolates for $2.80 or 12 for $3.99: Which is cheaper overall? Very lightweight installation, clean & simple: Works offline. No ads. No junk. No permissions, no purchases required.</p>
+							<p>Calculate best deal for the buck at supermarket. Quickly see the best and cheaper price of a deal. For e.g. A 675g bread for $1.88 or a 550g bread for $1.50: Which one is cheaper? Or, 8 chocolates for $2.80 or 12 for $3.99: Which is cheaper overall? Very lightweight installation, clean & simple: Works offline.  </p>
 							<p>
 								<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 							</p>
@@ -136,27 +134,18 @@
 			<!-- one app cont -->
 			
 			<div class="col-md-3 col-sm-6 hero-feature">
-				<!--  <div class="thumbnail">
-											<img src="//placehold.it/800x500" alt="">
-											<div class="caption">
-																		<h3>Feature Label</h3>
-																		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-																		<p>
-																									<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-																		</p>
-											</div>
-				</div> -->
+				 
 			</div>
 			<div class="col-md-3 col-sm-6 hero-feature">
 				<!--  <div class="thumbnail">
-											<img src="//placehold.it/800x500" alt="">
-											<div class="caption">
-																		<h3>Feature Label</h3>
-																		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-																		<p>
-																									<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-																		</p>
-											</div>
+													<img src="//placehold.it/800x500" alt="">
+													<div class="caption">
+																						<h3>Feature Label</h3>
+																						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																						<p>
+																															<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+																						</p>
+													</div>
 				</div> -->
 			</div>
 		</div>
