--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="Apps at Financializer.com">
 		<meta name="author" content="Financializer.com">
 		<link rel="canonical" href="https://apps.financializer.com" />
-		<title>Apps - Financializer.com</title>
+		<title>Apps - Financializer.com -</title>
 		<!-- Bootstrap Core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS -->
