--- a/ORIGindex.html
+++ b/ORIGindex.html
@@ -12,9 +12,9 @@
 		<link rel="canonical" href="https://apps.financializer.com" />
 		<title>Apps - Financializer.com -</title>
 		<!-- Bootstrap Core CSS -->
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS -->
-		<link href="apps_common/css/heroic-features.css" rel="stylesheet">
+		<link href="css/heroic-features.css" rel="stylesheet">
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -36,7 +36,7 @@
 		<div class="container">
 			<!-- Jumbotron Header -->
 			<header class="jumbotron hero-spacer">
-				<h1><img style="height:1em;display:inline-block;vertical-align:middle;" src="apps_common/logo_250.png"> Financializer Apps</h1>
+				<h1><img style="height:1em;display:inline-block;vertical-align:middle;" src="logo_250.png"> Financializer Apps</h1>
 				<p>Simple, user-friendly, lightweight and useful free phone apps. Try our Android apps available on Google Play!</p>
 				<p><a href="#apps_section" class="btn btn-primary btn-large">See them</a>
 			</p>
@@ -60,7 +60,7 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.averagecalculator">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="apps_common/com.financializer.averagecalculator.png" alt="">
+						<img src="com.financializer.averagecalculator.png" alt="">
 						<div class="caption">
 							<h3>Average Calculator (Mean, Median, Mode, Range)</h3>
 							<p> Simple & quick calc for Averages. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) & Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple:  Works offline. Freeware.</p>
@@ -75,7 +75,7 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.currencycalc">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="apps_common/com.financializer.currencycalc.png" alt="">
+						<img src="com.financializer.currencycalc.png" alt="">
 						<div class="caption">
 							<h3>Currency Converter (Quickest, Easiest)</h3>
 							<p> Quick, simple & light. Simply enter an amount and instantly see its equivalent in other currencies at once. Nothing else to tap or click. Completely FREE. Extremely user-friendly, fast and quick. Lightweight install.  </p>
@@ -90,7 +90,7 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="apps_common/com.financializer.percentoffcalc.png" alt="">
+						<img src="com.financializer.percentoffcalc.png" alt="">
 						<div class="caption">
 							<h3>Percent Off Calculator</h3>
 							<p>Simple & quick calc for discount sales prices.  Quickly see how much a particular store sale discount price tag means using this handy and simple, yet very helpful app. E.g. 30% Off, 50% Off, 75% Off prices in a glance. Especially useful for "store closing" type sales. Very lightweight installation, clean & simple: Works offline.  </p>
@@ -105,7 +105,7 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="apps_common/com.financializer.pricewithtax.png" alt="">
+						<img src="com.financializer.pricewithtax.png" alt="">
 						<div class="caption">
 							<h3>Price With Tax Calculator</h3>
 							<p>Quick Price+Tax (VAT/GST/HST). Lightweight.  Enter a price and instantly see the total plus sales and retail tax, GST, VAT, PST, HST, RT, ST etc. Very lightweight install.  </p>
@@ -120,7 +120,7 @@
 			<a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper">
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="apps_common/com.financializer.whichoneischeaper.png" alt="">
+						<img src="com.financializer.whichoneischeaper.png" alt="">
 						<div class="caption">
 							<h3>Which One Is Cheaper Calculator</h3>
 							<p>Calculate best deal for the buck at supermarket. Quickly see the best and cheaper price of a deal. For e.g. A 675g bread for $1.88 or a 550g bread for $1.50: Which one is cheaper? Or, 8 chocolates for $2.80 or 12 for $3.99: Which is cheaper overall? Very lightweight installation, clean & simple: Works offline.  </p>
@@ -134,18 +134,18 @@
 			<!-- one app cont -->
 			
 			<div class="col-md-3 col-sm-6 hero-feature">
-				
+				 
 			</div>
 			<div class="col-md-3 col-sm-6 hero-feature">
 				<!--  <div class="thumbnail">
-														<img src="//placehold.it/800x500" alt="">
-														<div class="caption">
-																								<h3>Feature Label</h3>
-																								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-																								<p>
-																																		<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-																								</p>
-														</div>
+													<img src="//placehold.it/800x500" alt="">
+													<div class="caption">
+																						<h3>Feature Label</h3>
+																						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																						<p>
+																															<a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+																						</p>
+													</div>
 				</div> -->
 			</div>
 		</div>
@@ -161,7 +161,9 @@
 		</footer>
 	</div>
 	<!-- /.container -->
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> <!--  lessthan 3 for BS 3! -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<!-- jQuery -->
+	<script src="js/jquery.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
