--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<!--  -->
 				<!--  -->
 				<!--  -->
-				<!-- one app cont -->
+				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.averagecalculator">
 					<div class="col-md-3 col-sm-6 hero-feature">
 						<div class="thumbnail">
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 				</a>
-				<!-- one app cont -->
+				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.currencycalc">
 					<div class="col-md-3 col-sm-6 hero-feature">
 						<div class="thumbnail">
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 				</a>
-				<!-- one app cont -->
+				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.percentoffcalc">
 					<div class="col-md-3 col-sm-6 hero-feature">
 						<div class="thumbnail">
@@ -103,7 +103,7 @@
 						</div>
 					</div>
 				</a>
-				<!-- one app cont -->
+				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.pricewithtax">
 					<div class="col-md-3 col-sm-6 hero-feature">
 						<div class="thumbnail">
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 				</a>
-				<!-- one app cont -->
+				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.whichoneischeaper">
 					<div class="col-md-3 col-sm-6 hero-feature">
 						<div class="thumbnail">
@@ -133,7 +133,23 @@
 						</div>
 					</div>
 				</a>
-				<!-- one app cont -->
+
+				<!-- ============ ONE APP CONT ============ -->
+				<a href="//play.google.com/store/apps/details?id=com.financializer.quickpercentage">
+					<div class="col-md-3 col-sm-6 hero-feature">
+						<div class="thumbnail">
+							<img src="apps_common/com.financializer.quickpercentage.png" alt="">
+							<div class="caption">
+								<h3>Quick Percentage (Tips, Tax etc) Calculator</h3>
+								<p>Quickly see a particular amount's percentage — using this handy and simple, yet very helpful app. E.g. 8%, 15%, 30% etc in a glance. Especially useful for giving tips, or group ordering, or shopping taxes etc. Very lightweight installation, clean & simple: Works offline. </p>
+								<p>
+									<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+								</p>
+							</div>
+						</div>
+					</div>
+				</a>
+
 				
 				<div class="col-md-3 col-sm-6 hero-feature">
 					
