--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<img src="apps_common/com.financializer.averagecalculator.png" alt="">
 							<div class="caption">
 								<h3>Average Calculator (Mean, Median, Mode, Range)</h3>
-								<p> Simple & quick calc for Averages. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) & Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple:  Works offline. Freeware.</p>
+								<p> Simple & quick calc for Averages. Simply punch in a series of numbers and see Averages updating in real time. Average (Mean), Middle (Median), Frequent (Mode) &amp; Max-Min (Range). Extremely user-friendly, quick and convenient. Very lightweight installation, clean & simple:  Works offline. Freeware.</p>
 								<p>
 									<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
 								</p>
@@ -133,7 +133,6 @@
 						</div>
 					</div>
 				</a>
-
 				<!-- ============ ONE APP CONT ============ -->
 				<a href="//play.google.com/store/apps/details?id=com.financializer.quickpercentage">
 					<div class="col-md-3 col-sm-6 hero-feature">
@@ -149,7 +148,24 @@
 						</div>
 					</div>
 				</a>
+				<!-- ============ ONE APP CONT ============ -->
+				<a href="//play.google.com/store/apps/details?id=com.financializer.cryptocoincalc">
+					<div class="col-md-3 col-sm-6 hero-feature">
+						<div class="thumbnail">
+							<img src="apps_common/com.financializer.cryptocoincalc.png" alt="">
+							<div class="caption">
+								<h3>Crypto Coin Exchange Calculator</h3>
+								<p> Instantly get a selected cryptocurrency equivalent in others at once in a quick reference chart. Safe, clean & secure — like all our other apps. Simple and easy to use and completely FREE!</p>
+								<p>
+									<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+								</p>
+							</div>
+						</div>
+					</div>
+				</a>
 
+
+				<!-- =========================== -->
 				
 				<div class="col-md-3 col-sm-6 hero-feature">
 					
