--- a/index.html
+++ b/index.html
@@ -163,8 +163,23 @@
 						</div>
 					</div>
 				</a>
-
-
+				<!-- =========================== -->
+				
+				<!-- ============ ONE APP CONT ============ -->
+				<a href="//play.google.com/store/apps/details?id=com.financializer.stockscompare">
+					<div class="col-md-3 col-sm-6 hero-feature">
+						<div class="thumbnail">
+							<img src="apps_common/com.financializer.stockscompare.png" alt="">
+							<div class="caption">
+								<h3>Compare Stocks</h3>
+								<p> Simple stock performance history comparison & reference with charts</p>
+								<p>
+									<div class="btn btn-primary">Install Now!</div> <div class="btn btn-default">More Info</div>
+								</p>
+							</div>
+						</div>
+					</div>
+				</a>
 				<!-- =========================== -->
 				
 				<div class="col-md-3 col-sm-6 hero-feature">
